# Artxtic

./: .gitignore  README.md  artxctic_frontend_handoff.md  package-lock.json
artxctic-backend/: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  check_db_media.py  check_users.py  debug_generate.py  docker-compose.yml  pyproject.toml  reproduce_issue.py  reproduce_pydantic_error.py  requirements.txt  run.py  verify_backend_fix.py  verify_batch_status.py
artxctic-backend/alembic/: env.py
artxctic-backend/alembic/versions/: 7e28cabbd659_initial.py  add_dodopayments_customer_id_to_users.py
artxctic-backend/app/: main.py
artxctic-backend/app/core/: config.py  database.py  dependencies.py  security.py  snowflake.py
artxctic-backend/app/middleware/: error_handler.py  logging.py  rate_limit.py
artxctic-backend/app/models/: audit.py  auth.py  media.py  queue.py  subscription.py  usage.py  user.py
artxctic-backend/app/schemas/: auth.py  common.py  media.py  subscription.py  user.py
artxctic-backend/app/services/: auth_service.py  email_service.py  fal_service.py  oauth_service.py  payment_service.py  storage_service.py  usage_service.py
artxctic-backend/app/tasks/: celery_app.py  email_tasks.py  generation_tasks.py  media_cleanup.py
artxctic-backend/app/utils/: exceptions.py  helpers.py  validators.py
artxctic-backend/docs/: DODOPAYMENTS_SETUP.md
artxctic-backend/scripts/: seed.py
artxctic-backend/tests/: conftest.py  test_auth.py  test_core.py  test_generation.py  test_library.py  test_profile.py  test_subscription.py  test_utils.py
(+51 files in other folders)
